Adjust Certificate for All Level. Adjust List View's appearance.